changed ENV variable prefix from SECRET_SERVICE to OSS

--- a/docker-compose.coolify.yaml
+++ b/docker-compose.coolify.yaml
@@ -11,13 +11,13 @@ services:
     ports:
       - '127.0.0.1:8080:8080'
     environment:
-      - 'SECRET_SERVICE_DOMAIN=${SECRET_SERVICE_DOMAIN:-http://localhost:8080}'
-      - 'SECRET_SERVICE_DB=${SECRET_SERVICE_DB:-db:6379}'
-      - 'SECRET_SERVICE_HOST=${SECRET_SERVICE_HOST:-0.0.0.0:8080}'
-      - 'SECRET_SERVICE_UI=${SECRET_SERVICE_UI:-true}'
-      - 'SECRET_SERVICE_BASIC_AUTH_ENABLED=${SECRET_SERVICE_BASIC_AUTH_ENABLED:-false}'
-      - 'SECRET_SERVICE_BASIC_AUTH_USERNAME=${SECRET_SERVICE_BASIC_AUTH_USERNAME:-admin}'
-      - 'SECRET_SERVICE_BASIC_AUTH_PASSWORD=${SECRET_SERVICE_BASIC_AUTH_PASSWORD:-admin}'
+      - 'OSS_DOMAIN=${OSS_DOMAIN:-http://localhost:8080}'
+      - 'OSS_DB=${OSS_DB:-db:6379}'
+      - 'OSS_HOST=${OSS_HOST:-0.0.0.0:8080}'
+      - 'OSS_UI=${OSS_UI:-true}'
+      - 'OSS_BASIC_AUTH_ENABLED=${OSS_BASIC_AUTH_ENABLED:-true}'
+      - 'OSS_BASIC_AUTH_USERNAME=${OSS_BASIC_AUTH_USERNAME:-admin}'
+      - 'OSS_BASIC_AUTH_PASSWORD=${OSS_BASIC_AUTH_PASSWORD:-admin}'
 
 volumes:
   db_data:
