--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,10 @@ name: secret-notes
 
 services:
   db:
-    image: valkey/valkey:8-alpine
+    image: valkey/valkey:9-alpine
     # The 'command' directive correctly passes arguments to valkey-server
     command: valkey-server --save 60 1 --loglevel warning
+    mem_limit: 1g
     ports:
       - '127.0.0.1:8081:6379'
     # Uncomment this volume to make your data persistent
