--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,8 +14,8 @@ before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
-    # - go generate ./...
+    - bun run css
+    - go generate -tags bindata ./...
 
 builds:
   - main: ./cmd/server/main.go
@@ -27,6 +27,7 @@ builds:
     goarch: [ amd64, arm64 ]
     ldflags: "-s -w -X github.com/pudottapommin/onetime-secrets-service/pkg/version.Version={{.Version}} -X github.com/pudottapommin/onetime-secrets-service/pkg/version.Commit={{.Commit}} -X github.com/pudottapommin/onetime-secrets-service/pkg/version.Date={{.Date}}"
     flags: [ "-trimpath" ]
+    tags: [ "bindata"]
     mod_timestamp: "{{ .CommitTimestamp }}"
 
 upx:
